--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link href="/assets/css/zoom.css" rel="stylesheet">
     <link href="/assets/css/centre.css" rel="stylesheet">
     <script src="/assets/js/zoom.js"></script>
